--- a/index.html
+++ b/index.html
@@ -3,36 +3,77 @@
   <head>
     <title>crime clusters</title>
     <script type='text/javascript'
-        src='http://mapbox.com/markers.js/dist/markers.0.5.3.min.js'></script>
+        src='/ext/markers.0.5.3.min.js'></script>
     <script type='text/javascript'
-        src='http://mapbox.com/markers.js/dist/markers.0.5.3.externals.js'></script>
-    <link href='http://mapbox.com/markers.js/dist/markers.0.5.3.css'
-    rel='stylesheet' type='text/css' />
+        src='/ext/markers.0.5.3.externals.js'></script>
+    <script type='text/javascript'
+        src='site/scale_factory.js'></script>
+    <script type='text/javascript'
+        src='src/clustr.js'></script>
+    <script type='text/javascript'
+        src='src/merge_intersecting.js'></script>
+    <link href='/ext/markers.0.5.3.css'
+        rel='stylesheet' type='text/css' />
     <style>
-        body { font: 14px/20px 'Helvetica', 'Helvetica Neue'; background:#eee; }
-        #map {
+        body { margin:0;font: 14px/20px 'Helvetica', 'Helvetica Neue'; background:#eee; }
+        .map {
+            width:320px;
+            height:300px;
+            border-right:1px solid #A63F74;
+            float:left;
+        }
+        .controls {
             position:absolute;
-            top:0;
-            left:0;
+            top:400px;
+            padding:10px;
             width:640px;
-            height:400px;
         }
     </style>
   </head>
   <body>
-    <div class='map' id='map'>
-    </div>
+    <div class='map' id='map'></div>
+    <div class='map' id='map-cluster'></div>
     <script type='text/javascript'>
+      var ml, features;
+      var map = new MM.Map('map');
+      var map_cluster = new MM.Map('map-cluster');
+      var radii = function(f) {
+          return clustr.area_to_radius(Math.round(+f.properties.Burglary * 0.05));
+      }
+      // Add b to a
+      var addPoints = function(a, b) {
+          a.properties.Burglary += b.properties.Burglary;
+          return a;
+      }
+      function change(type) {
+            if (!type) {
+                ml.features(features);
+            } else {
+                ml.features(clustr[type](features, radii, addPoints, m.getZoom()));
+            }
+      }
       wax.tilejson('http://a.tiles.mapbox.com/v3/tmcw.map-bzuvyug3.jsonp',
         function(tj) {
-          var m = new MM.Map('map', new wax.mm.connector(tj));
+            map.addLayer(new wax.mm.connector(tj));
+            map_cluster.addLayer(new wax.mm.connector(tj));
             mapbox.csv_url_to_geojson('data/texas_crime.csv', function(crimes) {
-                var ml = mapbox.markers()
-                    .factory(simplestyle_factory)
-                    .features(crimes);
-                m.addLayer(ml);
-                m.extent(ml.extent());
-                mmg_interaction(ml);
+                features = crimes.map(function(f) {
+                    f.properties.Burglary = +f.properties.Burglary;
+                    return f;
+                });
+
+                map.addLayer(mapbox.markers()
+                    .factory(scale_factory(radii))
+                    .features(features));
+
+                map.extent(map.getLayerAt(1).extent());
+
+                map_cluster.addLayer(mapbox.markers()
+                    .factory(scale_factory(radii))
+                    .features(
+                        clustr.merge_intersecting(features, radii, addPoints, map.zoom())));
+
+                map_cluster.extent(map.getLayerAt(1).extent());
             });
         });
     </script>
