--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>clustr</title>
     <script type='text/javascript'
-        src='/ext/mapbox.0.4.3.min.js'></script>
+        src='ext/mapbox.0.4.3.min.js'></script>
     <script type='text/javascript'
         src='src/clustr.js'></script>
     <script type='text/javascript'
