--- a/facet.html
+++ b/facet.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>clustr</title>
-    <script src='http://js.mapbox.com/mapbox.js/v0.6.0-dev/mapbox.js'></script>
-    <link href='http://js.mapbox.com/mapbox.js/v0.6.0-dev/mapbox.css' rel='stylesheet' />
+    <script src='https://api.tiles.mapbox.com/mapbox.js/v0.6.0-dev/mapbox.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox.js/v0.6.0-dev/mapbox.css' rel='stylesheet' />
     <script src='markers.js'></script>
     <script type='text/javascript'
         src='src/clustr.js'></script>
